update: security config

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 spring.jpa.hibernate.ddl-auto=create
 
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+bezkoder.app.jwtSecret=bezKoderSecretKey
+bezkoder.app.jwtExpirationMs=86400000
