--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/movie_review
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mysql12345
 
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
