--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 ## MySQL
 server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/movie_review
-spring.datasource.username=root
-spring.datasource.password=mysql12345
+spring.datasource.username=mysql
+spring.datasource.password=root
 
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-
 spring.jpa.hibernate.ddl-auto=update
